deploy/kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8081
    targetPort: http
    protocol: TCP
  selector:
    app: auth-service
