deploy/kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: auth-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: auth.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              name: http
